# toml

./: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: 1-map.rs  2-array.rs
crates/serde_spanned/: Cargo.toml
crates/serde_toml/: Cargo.toml
crates/toml/: Cargo.toml
crates/toml/src/de/parser/: document.rs  inline_table.rs
crates/toml/src/ser/: error.rs
crates/toml/tests/: decoder.rs
crates/toml_datetime/: Cargo.toml
crates/toml_datetime/src/: datetime.rs
crates/toml_edit/: Cargo.toml
crates/toml_edit/src/parser/: document.rs  inline_table.rs
crates/toml_edit_fuzz/: Cargo.toml
crates/toml_parser/: Cargo.toml
crates/toml_parser/src/decoder/: scalar.rs
crates/toml_parser/src/parser/: document.rs
crates/toml_parser/tests/testsuite/: parse_value.rs
crates/toml_writer/: Cargo.toml
crates/toml_writer/tests/: string.rs
