[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
repository = "https://github.com/toml-rs/toml"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.93"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[workspace.dependencies]
anstream = "1.0.0"
anstyle = "1.0.13"
divan = "0.1.21"
foldhash = { version = "0.2.0", default-features = false }
indexmap = { version = "2.13.0", default-features = false, features = ["std"] }
itertools = "0.14.0"
lexopt = "0.3.1"
libfuzzer-sys = "0.4.12"
proptest = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-untagged = "0.1.9"
serde_core = { version = "1.0.228", default-features = false, features = ["alloc"] }
serde_derive = "1"
serde_json = "1.0.149"
serde_spanned = { version = "1.0.5", path = "crates/serde_spanned", default-features = false, features = ["alloc", "serde"] }
snapbox = "1.0.0"
toml = { version = "1.0.2", path = "crates/toml" }
toml-test-data = "2.4.0"
toml-test-harness = { version = "1.4.0", features = ["snapshot"] }
toml_datetime = { version = "1.0.1", path = "crates/toml_datetime", default-features = false, features = ["alloc", "serde"] }
toml_edit = { version = "0.25.2", path = "crates/toml_edit", features = ["serde"] }
toml_old = { version = "1.0.1", package = "toml" }
toml_parser = { version = "1.0.9", path = "crates/toml_parser", default-features = false, features = ["alloc"] }
toml_types = { version = "1.0.2", package = "toml", path = "crates/toml", default-features = false, features = ["serde", "preserve_order"] }
toml_writer = { version = "1.0.7", path = "crates/toml_writer", default-features = false, features = ["alloc"] }
walkdir = "2.5.0"
winnow = { version = "0.7.14", default-features = false }

[patch.crates-io]
serde = { git = "https://github.com/earthlings-dev/serde.git" }
serde_core = { git = "https://github.com/earthlings-dev/serde.git" }
serde_derive = { git = "https://github.com/earthlings-dev/serde.git" }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "allow"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
get_first = "allow"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"  # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
needless_bool = "allow"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
use_self = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# debug = "line-tables-only"  # requires Cargo 1.71
