[package]
name = "toml_benchmarks"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
simd = ["toml_parser/simd"]
unsafe = ["toml_parser/unsafe"]
preserve_order = ["serde_json/preserve_order", "toml_old/preserve_order", "toml/preserve_order"]
fast_hash = ["toml/fast_hash"]

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
toml = { workspace = true }
toml_parser = { workspace = true }
toml_edit = { workspace = true, features = ["serde"] }
toml_old = { workspace = true }
serde_json = { workspace = true }
lexopt = { workspace = true }
divan = { workspace = true }
serde_spanned = { workspace = true }

[[bench]]
name = "0-cargo"
harness = false

[[bench]]
name = "1-map"
harness = false

[[bench]]
name = "2-array"
harness = false

[lints]
workspace = true
