[package]
name = "toml_edit"
version = "0.25.2"
description = "Yet another format-preserving TOML parser."
categories = ["encoding", "parser-implementations", "parsing", "config"]
keywords = ["encoding", "toml"]
autotests = false
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
tag-name = "v{{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/toml-rs/toml/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["parse", "display"]
parse = ["dep:toml_parser", "dep:winnow"]
display = ["dep:toml_writer"]
serde = ["dep:serde_core", "toml_datetime/serde", "dep:serde_spanned"]
debug = ["toml_parser?/debug", "dep:anstream", "dep:anstyle", "display"]
# Provide a method disable_recursion_limit to parse arbitrarily deep structures
# without any consideration for overflowing the stack. Additionally you will
# need to be careful around other recursive operations on the parsed result
# which may overflow the stack after deserialization has completed, including,
# but not limited to, Display and Debug and Drop impls.
unbounded = []

[dependencies]
indexmap = { workspace = true, features = ["std"] }
winnow = { workspace = true, optional = true }
serde_core = { workspace = true, optional = true }
toml_datetime = { workspace = true }
serde_spanned = { workspace = true, features = ["serde"], optional = true }
toml_writer = { workspace = true, optional = true }
toml_parser = { workspace = true, optional = true }
anstream = { workspace = true, optional = true }
anstyle = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml-test-harness = { workspace = true, features = ["snapshot"] }
toml-test-data = { workspace = true }
snapbox = { workspace = true }
proptest = { workspace = true }
walkdir = { workspace = true }
serde_spanned = { workspace = true }
toml_types = { workspace = true, default-features = false, features = ["serde", "preserve_order"] }
serde-untagged = { workspace = true }

[[test]]
name = "testsuite"
required-features = ["parse", "display"]

[[test]]
name = "compliance"
required-features = ["parse", "display"]

[[test]]
name = "decoder_compliance"
required-features = ["parse", "display"]
harness = false

[[test]]
name = "encoder_compliance"
required-features = ["parse", "display"]
harness = false

[[test]]
name = "serde"
required-features = ["parse", "display", "serde"]

[[example]]
name = "visit"
required-features = ["parse", "display"]
test = true

[lints]
workspace = true
